[Edu] Spring Filter 적용 및 Load Balancing

--- a/apigateway-service/src/main/resources/application.yml
+++ b/apigateway-service/src/main/resources/application.yml
@@ -2,8 +2,8 @@ server:
   port: 8000
 eureka:
   client:
-    fetch-registry: false
-    register-with-eureka: false
+    fetch-registry: true
+    register-with-eureka: true
     service-url:
       defaultZone: http://localhost:8761/eureka
 spring:
@@ -11,18 +11,31 @@ spring:
     name: apigateway-service
   cloud:
     gateway:
+      default-filters:
+        - name: GlobalFilter
+          args:
+            baseMessage: Spring Cloud Gateway Global Filter
+            preLogger: true
+            postLogger: true
       routes:
         - id: first-service
-          uri : http://localhost:8081/
+          uri : lb://MY-FIRST-SERVICE
           filters:
-            - AddRequestHeader= first-request, first-request-header2
-            - AddResponseHeader= first-response, first-response-header2
+#             - AddRequestHeader= first-request, first-request-header2
+#            - AddResponseHeader= first-response, first-response-header2
+            - CustomFilter
           predicates:
             - Path=/first-service/**
         - id: first-service
-          uri: http://localhost:8082/
+          uri: lb://MY-SECOND-SERVICE
           filters:
-            - AddRequestHeader= second-request,second-request-header2
-            - AddResponseHeader= second-response,second-response-header2
+#            - AddRequestHeader= second-request,second-request-header2
+#            - AddResponseHeader= second-response,second-response-header2
+            - name: CustomFilter
+            - name: LoggingFilter
+              args:
+                baseMessage: Hi, There.
+                preLogger: true
+                postLogger: true
           predicates:
             - Path=/second-service/**
